Now prevents touch actions on canvas box to prevent  scrolling/header collapse from interfering with doodling.

--- a/bspaint.css
+++ b/bspaint.css
@@ -62,14 +62,15 @@ h2 {
 }
 
 #canvasBox {
-    flex: 0 1 500px;
-    height: 500px;
-    max-height: 100vw;
-    max-width: 100vw;
-    width: 500px;
     border: 2px solid #555;
     cursor: crosshair;
+    flex: 0 1 500px;
+    height: 500px;
     margin: 0 auto;
+    max-height: 100vw;
+    max-width: 100vw;
+    touch-action: none;
+    width: 500px;
 }
 
 #toolBox {
